WIP standardizare clase templates

--- a/src/templates/R/01_cpis.html
+++ b/src/templates/R/01_cpis.html
@@ -57,7 +57,7 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <h2 class="h2class">{{T0014}}</h2>
+            <h2 class="h2class mt-10">{{T0014}}</h2>
 
             <div class="divclass mt-4">
                 <div>{{T0015}}. {{T0016}}</div>
@@ -122,7 +122,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T0037}}</h2>
+            <h2 class="h2class mt-10">{{T0037}}</h2>
 
             <div class="divclass mt-6">
                 <div>{{T0038}}. {{T0039}}</div>
@@ -282,7 +282,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T0084}}</h2>
+            <h2 class="h2class mt-10">{{T0084}}</h2>
             <h3 class="h3class">{{T0085}}</h3>
 
             <div class="divclass mt-6">
@@ -2681,7 +2681,7 @@
             </div>
 
             <!-- /* Section 4 */ -->
-            <h2 class="h2class">{{T0597}}</h2>
+            <h2 class="h2class mt-10">{{T0597}}</h2>
 
 
             <div class="divclass mt-6">
@@ -3068,7 +3068,7 @@
             </div>
 
 
-            <h2 class="h2class">{{T0696}}</h2>
+            <h2 class="h2class mt-10">{{T0696}}</h2>
             <h3 class="h3class">{{T0697}}</h3>
 
             <p class="mt-10">{{T0698}}: {{T0699}}</p>
@@ -4180,7 +4180,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T0964}}</h2>
+            <h2 class="h2class mt-10">{{T0964}}</h2>
 
             <div class="divclass mt-6">
                 <div>{{T0965}}. {{T0966}}<small class="smallclass mt-4">{{T0967}}</small>
@@ -4914,7 +4914,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T1021}}</h2>
+            <h2 class="h2class mt-10">{{T1021}}</h2>
 
             <div class="divclass mt-10">
                 <div>{{T1022}}. {{T1023}}</div>
@@ -5050,7 +5050,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T1066}}</h2>
+            <h2 class="h2class mt-10">{{T1066}}</h2>
 
             <div class="divclass mt-10">
                 <div>{{T1067}}. {{T1068}}</div>
@@ -5364,7 +5364,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T1157}}</h2>
+            <h2 class="h2class mt-10">{{T1157}}</h2>
 
             <p>{{T1158}} {{T1159}}</p>
             <div class="divclass mt-4">
@@ -5538,7 +5538,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T1185}}</h2>
+            <h2 class="h2class mt-10">{{T1185}}</h2>
 
             <div class="divclass mt-10">
                 <div>{{T1186}}. {{T1187}}<small class="smallclass">{{T1188}}</small></div>
@@ -5697,7 +5697,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T1231}}</h2>
+            <h2 class="h2class mt-10">{{T1231}}</h2>
             <small class="smallclass">{{T1232}}</small>
 
             <p>{{T1233}}. {{T1234}}</p>
@@ -6045,7 +6045,7 @@
             </div>
 
 
-            <h2 class="h2class">{{T1317}}</h2>
+            <h2 class="h2class mt-10">{{T1317}}</h2>
             <small class="smallclass">{{T1318}}</small>
 
             <p>{{T1319}} {{T1320}}</p>
@@ -6186,7 +6186,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T1353}}</h2>
+            <h2 class="h2class mt-10">{{T1353}}</h2>
 
             <div class="divclass mt-10">
                 <div>{{T1354}}. {{T1355}}</div>
@@ -6288,7 +6288,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T1388}}</h2>
+            <h2 class="h2class mt-10">{{T1388}}</h2>
 
             <div class="divclass mt-10">
                 <div>{{T1389}}. {{T1390}}</div>
@@ -6392,7 +6392,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T1420}}</h2>
+            <h2 class="h2class mt-10">{{T1420}}</h2>
 
             <div class="divclass mt-10">
                 <div>{{T1421}}. {{T1422}}</div>
