--- a/src/templates/R/02_cibs.html
+++ b/src/templates/R/02_cibs.html
@@ -57,7 +57,7 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <h2 class="h2class">{{T0014}}</h2>
+            <h2 class="h2class mt-10">{{T0014}}</h2>
             <div class="divclass mt-4">
                 <div>{{T0015}}. {{T0016}}</div>
                 <div>
@@ -134,7 +134,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T0043}}</h2>
+            <h2 class="h2class mt-10">{{T0043}}</h2>
 
             <div class="divclass mt-6">
                 <div>{{T0044}} {{T0045}}</div>
@@ -295,7 +295,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T0092}}</h2>
+            <h2 class="h2class mt-10">{{T0092}}</h2>
 
 
 
@@ -1260,12 +1260,12 @@
 
             <div class="divclass mt-6">
                 <div>CT3a. {{T0212}}</div>
-                <div class="flex items-center">
+                <div class="centerflex">
                     <input type="checkbox" id="ct3a_out" name="ct3a_out" value="{{ct3a_out-1}}" class="cbclass">
                     <label for="ct3a_out" class="labelclass">{{T1340}}</label>
                 </div>
                 <div></div>
-                <div class="flex items-center">
+                <div class="centerflex">
                     <input type="checkbox" id="ct3a_dk" name="ct3a_dk" value="{{ct3a_dk-1}}" class="cbclass">
                     <label for="ct3a_dk" class="labelclass">{{T0163}}</label>
                 </div>
@@ -2168,7 +2168,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T0597}}</h2>
+            <h2 class="h2class mt-10">{{T0597}}</h2>
 
             <div class="divclass mt-6">
                 <div>{{T0598}}. {{T0599}}</div>
@@ -3183,7 +3183,7 @@
             </div>
 
 
-            <h2 class="h2class">{{T0814}}</h2>
+            <h2 class="h2class mt-10">{{T0814}}</h2>
             <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">{{T0815}}</h3>
 
             <div class="divclass mt-6">
@@ -4757,7 +4757,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T1069}}</h2>
+            <h2 class="h2class mt-10">{{T1069}}</h2>
 
             <small class="my-2 smallclass">{{T1070}}</small>
             <p>{{T1071}}. {{T1072}}</p>
@@ -5096,7 +5096,7 @@
                 </select>
             </div>
 
-            <h2 class="h2class">{{T1155}}</h2>
+            <h2 class="h2class mt-10">{{T1155}}</h2>
 
             <small class="my-2 smallclass">{{T1156}}</small>
             <p>{{T1157}}: {{T1158}}</p>
@@ -5237,7 +5237,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T1191}}</h2>
+            <h2 class="h2class mt-10">{{T1191}}</h2>
 
             <div class="divclass mt-10">
                 <div>{{T1192}}. {{T1193}}</div>
@@ -5350,7 +5350,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T1226}}</h2>
+            <h2 class="h2class mt-10">{{T1226}}</h2>
 
             <div class="grid grid-cols-2 gap-4 mt-10">
                 <div>{{T1228}}. {{T1229}}</div>
