--- a/src/templates/R/05a_tqyp.html
+++ b/src/templates/R/05a_tqyp.html
@@ -32,7 +32,7 @@
             <p class="mb-2">{{T0003}}</p>
             <p class="mb-2">{{T0004}}</p>
 
-            <h2 class="h2class">{{T0005}}</h2>
+            <h2 class="h2class mt-10">{{T0005}}</h2>
 
             <div class="divclass mt-12">
                 <div>STR1. {{T0006}}</div>
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <h2 class="h2class">{{T0034}}</h2>
+            <h2 class="h2class mt-10">{{T0034}}</h2>
 
 
             <div class="divclass mt-6">
@@ -182,11 +182,11 @@
             <div class="divclass mt-6">
                 <div class="col-span-1">PTR3. {{T0040}}</div>
                 <div class="col-span-1 flex gap-4">
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr3-1" type="radio" value="{{ptr3-1}}" name="ptr3" class="valueclass" />
                         <label for="ptr3-1" class="labelclass">{{T0041}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr3-2" type="radio" value="{{ptr3-2}}" name="ptr3" class="valueclass" />
                         <label for="ptr3-2" class="labelclass">{{T0042}}</label>
                     </div>
@@ -209,7 +209,7 @@
 
             <div class="divclass mt-6">
                 <div>PTR5a. {{T0046}}</div>
-                <div class="flex items-center">
+                <div class="centerflex">
                     <input id="ptr5a_dk" name="ptr5a_dk" type="checkbox" value="{{ptr5a_dk-1}}" class="cbclass">
                     <label for="ptr5a_dk" class="labelclass">9. Not known</label>
                 </div>
@@ -262,39 +262,39 @@
             <div class="divclass mt-6">
                 <div class="col-span-1">PTR7. {{T0053}}</div>
                 <div class="div2class">
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr7-1" type="radio" value="{{ptr7-1}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-1" class="labelclass">{{T0054}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr7-2" type="radio" value="{{ptr7-2}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-2" class="labelclass">{{T0055}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr7-3" type="radio" value="{{ptr7-3}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-3" class="labelclass">{{T0056}}e alternative
                             care </label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr7-4" type="radio" value="{{ptr7-4}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-4" class="labelclass">{{T0057}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr7-5" type="radio" value="{{ptr7-5}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-5" class="labelclass">{{T0058}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr7-6" type="radio" value="{{ptr7-6}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-6" class="labelclass">{{T0059}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr7-7" type="radio" value="{{ptr7-7}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-7" class="labelclass">{{T0060}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input type="text" id="ptr7_other" name="ptr7_other" class="inputclass block w-full" />
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr7-8" type="radio" value="{{ptr7-8}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-8" class="labelclass">{{T0061}}</label>
                     </div>
@@ -304,30 +304,30 @@
             <div class="divclass mt-6">
                 <div class="col-span-1">PTR8. {{T0062}}</div>
                 <div class="div2class">
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr8-1" type="radio" value="{{ptr8-1}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-1" class="labelclass">{{T0063}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr8-2" type="radio" value="{{ptr8-2}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-2" class="labelclass">{{T0064}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr8-3" type="radio" value="{{ptr8-3}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-3" class="labelclass">{{T0065}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr8-4" type="radio" value="{{ptr8-4}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-4" class="labelclass">{{T0066}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr8-5" type="radio" value="{{ptr8-5}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-5" class="labelclass">{{T0067}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input type="text" id="ptr8_other" name="ptr8_other" class="inputclass block w-full" />
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="ptr8-6" type="radio" value="{{ptr8-6}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-6" class="labelclass">{{T0068}}</label>
                     </div>
@@ -337,21 +337,21 @@
 
             <div class="divclass mt-6">
                 <div>a. {{T0073}}</div>
-                <div class="flex items-center">
+                <div class="centerflex">
                     <input type="text" id="ptr8a" name="ptr8a" class="inputclass block w-full" />
                 </div>
             </div>
 
             <div class="divclass mt-6">
                 <div>b. {{T0074}}</div>
-                <div class="flex items-center">
+                <div class="centerflex">
                     <input type="text" id="ptr8b" name="ptr8b" class="inputclass block w-full" />
                 </div>
             </div>
 
             <div class="divclass mt-6">
                 <div>c. {{T0075}}</div>
-                <div class="flex items-center">
+                <div class="centerflex">
                     <input type="text" id="ptr8c" name="ptr8c" class="inputclass block w-full" />
                 </div>
             </div>
@@ -395,14 +395,14 @@
 
             <div class="divclass mt-6">
                 <div>PTR9. {{T0083}}</div>
-                <div class="flex items-center">
+                <div class="centerflex">
                     <textarea id="ptr9" name="ptr9" class="inputclass block w-full"></textarea>
                 </div>
             </div>
 
             <div class="divclass mt-6">
                 <div>PTR10. {{T0084}}</div>
-                <div class="flex items-center">
+                <div class="centerflex">
                     <textarea id="ptr10" name="ptr10" class="inputclass block w-full"></textarea>
                 </div>
             </div>
