--- a/src/templates/R/06_dsee.html
+++ b/src/templates/R/06_dsee.html
@@ -151,11 +151,11 @@
             <div class="grid grid-cols-3 gap-4 items-center mt-4">
                 <div class="col-span-2">{{T0058}}. {{T0059}}</div>
                 <div class="col-span-1 flex gap-4">
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="net1-1" type="radio" value="{{net1-1}}" name="net1" class="valueclass" />
                         <label for="net1-1" class="labelclass font-medium">{{T0060}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="net1-2" type="radio" value="{{net1-2}}" name="net1" class="valueclass" />
                         <label for="net1-2" class="labelclass font-medium">{{T0061}}</label>
                     </div>
@@ -443,11 +443,11 @@
             <div class="grid grid-cols-3 gap-4 items-center mt-4">
                 <div class="col-span-2">{{T0116}}. {{T0117}}</div>
                 <div class="col-span-1 flex gap-4">
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="nex1-1" type="radio" value="{{nex1-1}}" name="nex1" class="valueclass" />
                         <label for="nex1-1" class="labelclass font-medium">{{T0118}}</label>
                     </div>
-                    <div class="flex items-center">
+                    <div class="centerflex">
                         <input id="nex1-2" type="radio" value="{{nex1-2}}" name="nex1" class="valueclass" />
                         <label for="nex1-2" class="labelclass font-medium">{{T0119}}</label>
                     </div>
