WIP aranjare clase

--- a/src/templates/R/05a_tqyp.html
+++ b/src/templates/R/05a_tqyp.html
@@ -34,22 +34,22 @@
 
             <h2 class="h2class mt-10">{{T0005}}</h2>
 
-            <div class="divclass mt-12">
+            <div class="div3class mt-12">
                 <div>STR1. {{T0006}}</div>
                 <div>
                     <input type="text" id="str1" name="str1" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>STR2. {{T0007}}</div>
                 <div>
                     <input type="text" id="str2" name="str2" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>STR3. {{T0008}}</div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>a. {{T0009}}</div>
                 <div>
                     <select id="str3a" name="str3a" class="selectclass">
@@ -57,7 +57,7 @@
                     </select>
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>b. {{T0010}}</div>
                 <div>
                     <select id="str3b" name="str3b" class="selectclass">
@@ -65,7 +65,7 @@
                     </select>
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>c. {{T0011}}</div>
                 <div>
                     <select id="str3c" name="str3c" class="selectclass">
@@ -76,7 +76,7 @@
 
             <input type="hidden" id="str3e" name="str3e" />
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>STR4. {{T0012}}</div>
                 <div>
                     <select id="str4" name="str4" class="selectclass">
@@ -103,46 +103,46 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>OMR1. {{T0026}}</div>
                 <div>
                     <input type="text" id="omr1" name="omr1" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>OMR2. {{T0027}}</div>
                 <div>
                     <input type="text" id="omr2" name="omr2" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>OMR3. {{T0028}}</div>
                 <div>
                     <input type="text" id="omr3" name="omr3" class="inputclass block w-full" />
                 </div>
             </div>
 
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>OMR4. {{T0029}}</div>
                 <div>
                     <input type="text" id="omr4" name="omr4" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>OMR5. {{T0030}}</div>
                 <div>
                     <input type="text" id="omr5" name="omr5" class="inputclass block w-full" />
                 </div>
             </div>
 
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>OMR6. {{T0031}}</div>
                 <div>
                     <input type="text" id="omr6" name="omr6" class="inputclass block w-full" />
                 </div>
             </div>
 
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>OMR7. {{T0032}}</div>
                 <div>
                     <input type="text" id="omr7" name="omr7" class="inputclass block w-full" />
@@ -152,7 +152,7 @@
             <h2 class="h2class mt-10">{{T0034}}</h2>
 
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>PTR1. {{T0035}}</div>
                 <div>
                     <input type="text" id="ptr1" name="ptr1" class="inputclass block w-full" />
@@ -161,27 +161,27 @@
 
             <p class="italic text-red-500">{{T0036}}</p>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>PTR2a. {{T0037}}</div>
                 <div>
                     <input type="text" id="ptr2a" name="ptr2a" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>PTR2b. {{T0038}}</div>
                 <div>
                     <input type="text" id="ptr2b" name="ptr2b" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>PTR2c. {{T0039}}</div>
                 <div>
                     <input type="text" id="ptr2c" name="ptr2c" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
-                <div class="col-span-1">PTR3. {{T0040}}</div>
-                <div class="col-span-1 flex gap-4">
+            <div class="div3class mt-6">
+                <div class="div1class">PTR3. {{T0040}}</div>
+                <div class="div2class">
                     <div class="centerflex">
                         <input id="ptr3-1" type="radio" value="{{ptr3-1}}" name="ptr3" class="valueclass" />
                         <label for="ptr3-1" class="labelclass">{{T0041}}</label>
@@ -192,13 +192,13 @@
                     </div>
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>PTR4. {{T0043}}</div>
                 <div>
                     <input type="text" id="ptr4" name="ptr4" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>
                     <p>PTR4a. {{T0044}}</p>
                 </div>
@@ -207,7 +207,7 @@
                 </div>
             </div>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>PTR5a. {{T0046}}</div>
                 <div class="centerflex">
                     <input id="ptr5a_dk" name="ptr5a_dk" type="checkbox" value="{{ptr5a_dk-1}}" class="cbclass">
@@ -259,9 +259,9 @@
                 </div>
             </div>
 
-            <div class="divclass mt-6">
-                <div class="col-span-1">PTR7. {{T0053}}</div>
-                <div class="div2class">
+            <div class="div3class mt-6">
+                <div class="div1class">PTR7. {{T0053}}</div>
+                <div class="div5class">
                     <div class="centerflex">
                         <input id="ptr7-1" type="radio" value="{{ptr7-1}}" name="ptr7" class="valueclass" />
                         <label for="ptr7-1" class="labelclass">{{T0054}}</label>
@@ -301,9 +301,9 @@
                 </div>
             </div>
 
-            <div class="divclass mt-6">
-                <div class="col-span-1">PTR8. {{T0062}}</div>
-                <div class="div2class">
+            <div class="div3class mt-6">
+                <div class="div1class">PTR8. {{T0062}}</div>
+                <div class="div5class">
                     <div class="centerflex">
                         <input id="ptr8-1" type="radio" value="{{ptr8-1}}" name="ptr8" class="valueclass" />
                         <label for="ptr8-1" class="labelclass">{{T0063}}</label>
@@ -335,21 +335,21 @@
             </div>
 
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>a. {{T0073}}</div>
                 <div class="centerflex">
                     <input type="text" id="ptr8a" name="ptr8a" class="inputclass block w-full" />
                 </div>
             </div>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>b. {{T0074}}</div>
                 <div class="centerflex">
                     <input type="text" id="ptr8b" name="ptr8b" class="inputclass block w-full" />
                 </div>
             </div>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>c. {{T0075}}</div>
                 <div class="centerflex">
                     <input type="text" id="ptr8c" name="ptr8c" class="inputclass block w-full" />
@@ -393,14 +393,14 @@
 
             <input type="hidden" id="ptr8h" name="ptr8h" class="inputclass block w-full" />
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>PTR9. {{T0083}}</div>
                 <div class="centerflex">
                     <textarea id="ptr9" name="ptr9" class="inputclass block w-full"></textarea>
                 </div>
             </div>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>PTR10. {{T0084}}</div>
                 <div class="centerflex">
                     <textarea id="ptr10" name="ptr10" class="inputclass block w-full"></textarea>
@@ -409,7 +409,7 @@
 
             <p class="mt-10 bg-gray-200 px-2 py-1"><strong>{{T0085}}</strong></p>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0090}}. {{T0091}}</div>
                 <div class="flex gap-4">
                     <textarea id="obs" name="obs" class="inputclass block w-full"></textarea>
