--- a/src/templates/R/06_dsee.html
+++ b/src/templates/R/06_dsee.html
@@ -40,31 +40,31 @@
 
             <input type="hidden" id="q1" name="q1" />
 
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>{{T0013}}. {{T0014}}</div>
                 <div>
                     <input type="text" id="q2" name="q2" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>{{T0015}}. {{T0016}}</div>
                 <div>
                     <input type="text" id="q3" name="q3" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>{{T0017}}. {{T0018}}</div>
                 <div>
                     <input type="text" id="q4" name="q4" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>{{T0019}}. {{T0020}}</div>
                 <div>
                     <input type="text" id="q5" name="q5" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>{{T0021}}. {{T0022}}</div>
                 <div>
                     <input type="text" id="q6" name="q6" class="inputclass block w-full" />
@@ -73,19 +73,19 @@
 
             <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">{{T0023}}</h2>
 
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>{{T0024}}. {{T0025}}</div>
                 <div>
                     <input type="text" id="i1" name="i1" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>{{T0026}}. {{T0027}}</div>
                 <div>
                     <input type="text" id="i2" name="i2" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>{{T0028}}. {{T0029}}</div>
                 <div>
                     <input type="text" id="i3" name="i3" class="inputclass block w-full" />
@@ -120,7 +120,7 @@
 
             <input type="hidden" id="i4d" name="i4d" />
 
-            <div class="divclass mt-4">
+            <div class="div3class mt-4">
                 <div>{{T0040}}. {{T0041}}</div>
                 <div>
                     <select id="i9" name="i9" class="selectclass">
@@ -144,13 +144,13 @@
             <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">{{T0055}}</h2>
             <div class="grid grid-cols-3 gap-4 items-center mt-4">
                 <div class="col-span-2">{{T0056}}. {{T0057}} <small class="smallclass">{{T0196}}</small></div>
-                <div class="col-span-1">
+                <div class="div1class">
                     <input type="text" id="tnr0" name="tnr0" class="inputclass block w-full" />
                 </div>
             </div>
             <div class="grid grid-cols-3 gap-4 items-center mt-4">
                 <div class="col-span-2">{{T0058}}. {{T0059}}</div>
-                <div class="col-span-1 flex gap-4">
+                <div class="div2class">
                     <div class="centerflex">
                         <input id="net1-1" type="radio" value="{{net1-1}}" name="net1" class="valueclass" />
                         <label for="net1-1" class="labelclass font-medium">{{T0060}}</label>
@@ -442,7 +442,7 @@
 
             <div class="grid grid-cols-3 gap-4 items-center mt-4">
                 <div class="col-span-2">{{T0116}}. {{T0117}}</div>
-                <div class="col-span-1 flex gap-4">
+                <div class="div2class">
                     <div class="centerflex">
                         <input id="nex1-1" type="radio" value="{{nex1-1}}" name="nex1" class="valueclass" />
                         <label for="nex1-1" class="labelclass font-medium">{{T0118}}</label>
