--- a/src/templates/R/03_csr.html
+++ b/src/templates/R/03_csr.html
@@ -37,31 +37,31 @@
 
             <input type="hidden" id="q1" name="q1" />
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0010}}. {{T0011}}</div>
                 <div>
                     <input type="text" id="q2" name="q2" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0012}}. {{T0013}}</div>
                 <div>
                     <input type="text" id="q3" name="q3" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0014}}. {{T0015}}</div>
                 <div>
                     <input type="text" id="q4" name="q4" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0016}}. {{T0017}}</div>
                 <div>
                     <input type="text" id="q5" name="q5" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0018}}. {{T0019}}</div>
                 <div>
                     <input type="text" id="q6" name="q6" class="inputclass block w-full" />
@@ -69,31 +69,31 @@
             </div>
 
             <h2 class="h2class mt-10">{{T0020}}</h2>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0021}}. {{T0022}}</div>
                 <div>
                     <input type="text" id="i1" name="i1" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0023}}. {{T0024}}</div>
                 <div>
                     <input type="text" id="i2" name="i2" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0025}}. {{T0026}}</div>
                 <div>
                     <input type="text" id="i3" name="i3" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0027}}. {{T0028}}</div>
                 <div>
                     <input type="text" id="i4" name="i4" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0029}}. {{T0030}}</div>
                 <div>
                     <select id="i4a" name="i4a" class="selectclass">
@@ -101,7 +101,7 @@
                     </select>
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0032}}. {{T0033}}</div>
                 <div>
                     <select id="i4b" name="i4b" class="selectclass">
@@ -109,7 +109,7 @@
                     </select>
                 </div>
             </div>
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>I4c. {{T0175}}</div>
                 <div>
                     <select id="i4c" name="i4c" class="selectclass">
@@ -120,7 +120,7 @@
 
             <input type="hidden" id="i4d" name="i4d" />
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0035}}. {{T0036}}</div>
                 <div>
                     <select id="i5" name="i5" class="selectclass">
@@ -143,16 +143,16 @@
 
             <h2 class="h2class mt-10">{{T0049}}</h2>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0050}}. {{T0051}}</div>
                 <div>
                     <input type="text" id="j1" name="j1" class="inputclass block w-full" />
                 </div>
             </div>
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0052}}. {{T0053}}</div>
-                <div class="div4class">
+                <div class="div7class">
                     <div class="flex items-center gap-4">
                         <input type="text" id="j2" name="j2" class="inputclass block w-full" />
                     </div>
@@ -162,9 +162,9 @@
                     </div>
                 </div>
             </div>
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0055}}. {{T0056}}</div>
-                <div class="div2class">
+                <div class="div5class">
                     <div class="centerflex">
                         <input id="j3-1" type="radio" value="{{j3-1}}" name="j3" class="valueclass" />
                         <label for="j3-1" class="labelclass">{{T0057}}</label>
@@ -192,9 +192,9 @@
                 </div>
             </div>
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0063}}. {{T0064}}</div>
-                <div class="div4class">
+                <div class="div7class">
                     <div class="centerflex">
                         <input id="j4-1" type="radio" value="{{j4-1}}" name="j4" class="valueclass" />
                         <label for="j4-1" class="labelclass">{{T0065}}</label>
@@ -206,16 +206,16 @@
                 </div>
             </div>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0067}}. {{T0068}}</div>
                 <div>
                     <input type="text" id="j5" name="j5" class="inputclass block w-full" />
                 </div>
             </div>
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0069}}. {{T0070}}</div>
-                <div class="div2class">
+                <div class="div5class">
                     <div class="centerflex">
                         <input id="j6-1" type="radio" value="{{j6-1}}" name="j6" class="valueclass" />
                         <label for="j6-1" class="labelclass">{{T0071}}</label>
@@ -251,7 +251,7 @@
                 </div>
             </div>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0084}}. {{T0085}}</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="j7" name="j7" class="inputclass block" />
@@ -259,9 +259,9 @@
                 </div>
             </div>
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0087}}. {{T0088}}</div>
-                <div class="div2class">
+                <div class="div5class">
                     <div class="centerflex">
                         <input id="j8-1" type="radio" value="{{j8-1}}" name="j8" class="valueclass" />
                         <label for="j8-1" class="labelclass">{{T0089}}</label>
@@ -284,7 +284,7 @@
             <h2 class="h2class mt-10">{{T0093}}</h2>
 
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0094}}. {{T0095}}</div>
                 <div>
                     <input type="text" id="e1" name="e1" class="inputclass block w-full" />
@@ -293,16 +293,16 @@
 
             <input type="hidden" id="euid" name="euid" />
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0099}}. {{T0100}}</div>
                 <div>
                     <input type="text" id="e2" name="e2" class="inputclass block w-full" />
                 </div>
             </div>
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0101}}. {{T0102}}</div>
-                <div class="div4class">
+                <div class="div7class">
                     <div class="centerflex">
                         <input id="e3-1" type="radio" value="{{e3-1}}" name="e3" class="valueclass" />
                         <label for="e3-1" class="labelclass">{{T0103}}</label>
@@ -314,9 +314,9 @@
                 </div>
             </div>
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0105}}. {{T0106}}</div>
-                <div class="div2class">
+                <div class="div5class">
                     <div class="centerflex">
                         <input id="e4-1" type="radio" value="{{e4-1}}" name="e4" class="valueclass" />
                         <label for="e4-1" class="labelclass">{{T0071}}</label>
@@ -352,21 +352,21 @@
                 </div>
             </div>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0112}}. {{T0113}}</div>
                 <div>
                     <input type="text" id="e5" name="e5" class="inputclass block w-full" />
                 </div>
             </div>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0114}}. {{T0115}}</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="e6" name="e6" class="inputclass block" /> {{T0116}}
                 </div>
             </div>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0117}}. {{T0118}}</div>
                 <div>
                     <input type="text" id="e7" name="e7" class="inputclass block w-full" />
@@ -374,9 +374,9 @@
             </div>
 
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0119}}. {{T0120}}</div>
-                <div class="div2class">
+                <div class="div5class">
                     <div class="centerflex">
                         <input id="e8-1" type="radio" value="{{e8-1}}" name="e8" class="valueclass" />
                         <label for="e8-1" class="labelclass">{{T0121}}</label>
@@ -414,9 +414,9 @@
             </div>
 
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0129}}. {{T0130}}</div>
-                <div class="div2class">
+                <div class="div5class">
                     <div class="centerflex">
                         <input id="e9-1" type="radio" value="{{e9-1}}" name="e9" class="valueclass" />
                         <label for="e4-1" class="labelclass">{{T0131}}</label>
@@ -437,9 +437,9 @@
             </div>
 
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0135}}. {{T0136}}</div>
-                <div class="div4class">
+                <div class="div7class">
                     <div class="centerflex">
                         <input id="e10-1" type="radio" value="{{e10-1}}" name="e10" class="valueclass" />
                         <label for="e10-1" class="labelclass">{{T0137}}</label>
@@ -451,9 +451,9 @@
                 </div>
             </div>
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0139}}. {{T0140}}</div>
-                <div class="div4class">
+                <div class="div7class">
                     <div class="centerflex">
                         <input id="e11-1" type="radio" value="{{e11-1}}" name="e11" class="valueclass" />
                         <label for="e11-1" class="labelclass">{{T0141}}</label>
@@ -465,9 +465,9 @@
                 </div>
             </div>
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0143}}. {{T0144}}</div>
-                <div class="div4class">
+                <div class="div7class">
                     <div class="centerflex">
                         <input id="e12-1" type="radio" value="{{e12-1}}" name="e12" class="valueclass" />
                         <label for="e12-1" class="labelclass">{{T0145}}</label>
@@ -479,9 +479,9 @@
                 </div>
             </div>
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0147}}. {{T0148}}</div>
-                <div class="div4class">
+                <div class="div7class">
                     <div class="centerflex">
                         <input id="e13-1" type="radio" value="{{e13-1}}" name="e13" class="valueclass" />
                         <label for="e13-1" class="labelclass">{{T0149}}</label>
@@ -494,7 +494,7 @@
             </div>
 
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0151}}. {{T0152}}</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="e14" name="e14" class="inputclass block" />
@@ -502,16 +502,16 @@
                 </div>
             </div>
 
-            <div class="divclass mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0154}}. {{T0155}}</div>
                 <div class="flex items-center gap-4">
                     <input type="text" id="e15" name="e15" class="inputclass block w-full" /> {{T0185}}
                 </div>
             </div>
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0156}}. {{T0157}}</div>
-                <div class="div4class">
+                <div class="div7class">
                     <div class="centerflex">
                         <input id="e16-1" type="radio" value="{{e16-1}}" name="e16" class="valueclass" />
                         <label for="e16-1" class="labelclass">{{T0158}}</label>
@@ -523,9 +523,9 @@
                 </div>
             </div>
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0160}}. {{T0161}}</div>
-                <div class="div4class">
+                <div class="div7class">
                     <div class="centerflex">
                         <input id="e17-1" type="radio" value="{{e17-1}}" name="e17" class="valueclass" />
                         <label for="e17-1" class="labelclass">{{T0162}}</label>
@@ -537,9 +537,9 @@
                 </div>
             </div>
 
-            <div class="divclass mt-10">
+            <div class="div3class mt-10">
                 <div>{{T0164}}. {{T0165}}</div>
-                <div class="div4class">
+                <div class="div7class">
                     <div class="centerflex">
                         <input id="e18-1" type="radio" value="{{e18-1}}" name="e18" class="valueclass" />
                         <label for="e18-1" class="labelclass">{{T0166}}</label>
