inca niste center flex-uri

--- a/src/templates/R/06_dsee.html
+++ b/src/templates/R/06_dsee.html
@@ -142,20 +142,20 @@
             </div>
 
             <h2 class="mt-10 mb-4 text-xl font-medium text-gray-700">{{T0055}}</h2>
-            <div class="grid grid-cols-3 gap-4 items-center mt-4">
+            <div class="div31class mt-4">
                 <div class="col-span-2">{{T0056}}. {{T0057}} <small class="smallclass">{{T0196}}</small></div>
                 <div class="div1class">
                     <input type="text" id="tnr0" name="tnr0" class="inputclass block w-full" />
                 </div>
             </div>
-            <div class="grid grid-cols-3 gap-4 items-center mt-4">
+            <div class="div31class mt-4">
                 <div class="col-span-2">{{T0058}}. {{T0059}}</div>
                 <div class="div2class">
-                    <div class="centerflex">
+                    <div class="centerflex1">
                         <input id="net1-1" type="radio" value="{{net1-1}}" name="net1" class="valueclass" />
                         <label for="net1-1" class="labelclass font-medium">{{T0060}}</label>
                     </div>
-                    <div class="centerflex">
+                    <div class="centerflex1">
                         <input id="net1-2" type="radio" value="{{net1-2}}" name="net1" class="valueclass" />
                         <label for="net1-2" class="labelclass font-medium">{{T0061}}</label>
                     </div>
@@ -440,14 +440,14 @@
                 </tbody>
             </table>
 
-            <div class="grid grid-cols-3 gap-4 items-center mt-4">
+            <div class="div31class mt-4">
                 <div class="col-span-2">{{T0116}}. {{T0117}}</div>
                 <div class="div2class">
-                    <div class="centerflex">
+                    <div class="centerflex1">
                         <input id="nex1-1" type="radio" value="{{nex1-1}}" name="nex1" class="valueclass" />
                         <label for="nex1-1" class="labelclass font-medium">{{T0118}}</label>
                     </div>
-                    <div class="centerflex">
+                    <div class="centerflex1">
                         <input id="nex1-2" type="radio" value="{{nex1-2}}" name="nex1" class="valueclass" />
                         <label for="nex1-2" class="labelclass font-medium">{{T0119}}</label>
                     </div>
