mutat fisierele in templates

--- a/src/templates/05a_tqyp.html
+++ b/src/templates/05a_tqyp.html
@@ -215,7 +215,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="div3class mt-6">
                 <div>PTR5b. {{T0048}}</div>
                 <div>
                     <select id="ptr5b" name="ptr5b" class="selectclass">
@@ -224,7 +224,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="div3class mt-6">
                 <div>PTR5c. {{T0050}}</div>
                 <div>
                     <select id="ptr5c" name="ptr5c" class="selectclass">
@@ -232,7 +232,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="div3class mt-6">
                 <div>PTR5d. {{T0081}}</div>
                 <div>
                     <select id="ptr5d" name="ptr5d" class="selectclass">
@@ -240,7 +240,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="div3class mt-6">
                 <div>{{T0094}}. {{T0095}}</div>
                 <div>
                     <select id="ptr5m" name="ptr5m" class="selectclass">
@@ -252,7 +252,7 @@
             <input type="hidden" id="ptr5e" name="ptr5e" class="inputclass block w-full" />
 
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="div3class mt-6">
                 <div>PTR6. {{T0052}}</div>
                 <div>
                     <input type="text" id="ptr6" name="ptr6" class="inputclass block w-full" />
@@ -356,7 +356,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="div3class mt-6">
                 <div>e. {{T0077}}:</div>
                 <div>
                     <select id="ptr8e" name="ptr8e" class="selectclass">
@@ -365,7 +365,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="div3class mt-6">
                 <div>f. {{T0079}}:</div>
                 <div>
                     <select id="ptr8f" name="ptr8f" class="selectclass">
@@ -373,7 +373,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="div3class mt-6">
                 <div>g. {{T0081}}</div>
                 <div>
                     <select id="ptr8g" name="ptr8g" class="selectclass">
@@ -382,7 +382,7 @@
 
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="div3class mt-6">
                 <div>m. {{T0097}}</div>
                 <div>
                     <select id="ptr8m" name="ptr8m" class="selectclass">
