--- a/src/templates/06_dsee.html
+++ b/src/templates/06_dsee.html
@@ -109,7 +109,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="div3class mt-6">
                 <div>I4c. {{T0038}}</div>
                 <div>
                     <select id="i4c" name="i4c" class="selectclass">
