modificari post pilotare

--- a/src/templates/04_qmr.html
+++ b/src/templates/04_qmr.html
@@ -2164,11 +2164,11 @@
                 <tbody>
                     <tr>
                         <td class="text-center w-1/2"></td>
-                        <td class="text-center w-1/10">Very bad<br>1</td>
-                        <td class="text-center w-1/10"><span class="text-white">Very bad</span><br>2</td>
-                        <td class="text-center w-1/10"><span class="text-white">Very bad</span><br>3</td>
-                        <td class="text-center w-1/10"><span class="text-white">Very bad</span><br>4</td>
-                        <td class="text-center w-1/10">Excellent<br>5</td>
+                        <td class="text-center w-1/10">{{T0765}}<br>1</td>
+                        <td class="text-center w-1/10"><span class="text-white">{{T0765}}</span><br>2</td>
+                        <td class="text-center w-1/10"><span class="text-white">{{T0765}}</span><br>3</td>
+                        <td class="text-center w-1/10"><span class="text-white">{{T0765}}</span><br>4</td>
+                        <td class="text-center w-1/10">{{T0766}}<br>5</td>
                     </tr>
                     <tr>
                         <td class="p-1">{{T0547}}</td>
@@ -2482,7 +2482,7 @@
                 </div>
                 <div class="centerflex4">
                     <input type="text" id="edu5" name="edu5" class="inputclass block w-32" />
-                    sqm
+                    {{T0608}}
                 </div>
             </div>
 
