ghilimea lipsa la DVI10

--- a/src/templates/01_cpis.html
+++ b/src/templates/01_cpis.html
@@ -5797,7 +5797,7 @@
                 <div class="ml-3">{{T1271}}. {{T1272}}</div>
                 <select id="dvi10" name="dvi10" class="selectclass">
                     <option value="-9">{{T1511}}</option>
-                    <option value="{{dvi10-1}} >{{T1509}}</option>
+                    <option value="{{dvi10-1}">{{T1509}}</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
